# smc_ai_project

./: .gitignore  README.md  pyproject.toml
brain/: README.md
brain/decisions/: 2026-05-18-memory-layer-gbrain.md  2026-05-19-llm-wiki-knowledge-layer.md  2026-05-19-quant-indicators-indexing-references.md  2026-05-19-signal-ensemble-conviction-engine.md  2026-05-20-openstock-dashboard-watchlist-alerts.md  2026-06-01-quant-ml-journal-review-references.md  2026-06-02-fvg-notebook-broker-csv.md  2026-06-02-ziadfrancis-references.md  2026-06-04-market-structure-trendline-backtesting-references.md  2026-06-04-trading-math-expectancy-risk.md
brain/operations/: README.md
brain/strategy/: winworld-rules.md
docs/: architecture-strategy-profiles.md  roadmap-agentic-research-platform.md  roadmap-llm-wiki-knowledge-layer.md  roadmap-market-structure-trendline-backtesting-references.md  roadmap-openstock-dashboard-watchlist-alerts.md  roadmap-project-memory-gbrain.md  roadmap-quant-indicators-indexing-references.md  roadmap-quant-ml-journal-review-references.md  roadmap-signal-conviction-engine.md  roadmap-ziadfrancis-references.md
docs/plans/: 2026-06-05-phase2-engine.md
docs/vps/: deployment.md
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  vite.config.ts
mql5/: smc_ai_dashboard.mq5
scripts/: export_mt5_data.py  fetch_twelvedata.py  generate_quarterly_report.py  generate_report.py  install_ea.py
smc_ai/: __init__.py  cli.py  config.py  db.py  main.py  utils.py
tests/: test_cli.py  test_config.py  test_main.py  test_package_import.py
(+94 files in other folders)
